--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -14,12 +14,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          wget https://downloads.tuxfamily.org/godotengine/4.2.2/mono/Godot_v4.2.2-stable_mono_linux_headless_x86_64.zip
-          unzip Godot_v4.2.2-stable_mono_linux_headless_x86_64.zip
-          mv Godot_v4.2.2-stable_mono_linux_headless_x86_64 godot
+          wget https://github.com/godotengine/godot-builds/releases/download/4.2.2-stable/Godot_v4.2.2-stable_linux.x86_64.zip
+          unzip Godot_v4.2.2-stable_linux.x86_64.zip
+          mv Godot_v4.2.2-stable_linux.x86_64.zip godot
 
-      - run: chmod +x godot/Godot_v4.2.2-stable_mono_linux_headless_x86_64
+      - run: chmod +x godot/Godot_v4.2.2-stable_linux.x86_64.zip
 
       - name: Test
         run: |
-          ./godot/Godot_v4.2.2-stable_mono_linux_headless_x86_64 --headless --path . --quit-after 1
+          ./godot/Godot_v4.2.2-stable_linux.x86_64.zip --headless --path . --quit-after 1
