--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -16,10 +16,10 @@ jobs:
       - run: |
           wget https://github.com/godotengine/godot-builds/releases/download/4.2.2-stable/Godot_v4.2.2-stable_linux.x86_64.zip
           unzip Godot_v4.2.2-stable_linux.x86_64.zip
-          mv Godot_v4.2.2-stable_linux.x86_64.zip godot
+          mv Godot_v4.2.2-stable_linux.x86_64 godot
 
       - run: chmod +x godot/Godot_v4.2.2-stable_linux.x86_64.zip
 
       - name: Test
         run: |
-          ./godot/Godot_v4.2.2-stable_linux.x86_64.zip --headless --path . --quit-after 1
+          ./godot/Godot_v4.2.2-stable_linux.x86_64 --headless --path . --quit-after 1
