--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -18,7 +18,7 @@ jobs:
           unzip Godot_v4.2.2-stable_linux.x86_64.zip
           mv Godot_v4.2.2-stable_linux.x86_64 godot
 
-      - run: chmod +x ./godot/
+      - run: chmod +x godot/
 
       - name: Test
         run: |
