--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -14,9 +14,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          wget https://github.com/godotengine/godot-builds/releases/download/4.2.2-stable/Godot_v4.2.2-stable_linux.x86_64.zip;
-          unzip Godot_v4.2.2-stable_linux.x86_64.zip;
-          mv Godot_v4.2.2-stable_linux.x86_64 godot;
+          wget https://github.com/godotengine/godot-builds/releases/download/4.2.2-stable/Godot_v4.2.2-stable_linux.x86_64.zip
+      
+      - run: |
+          unzip Godot_v4.2.2-stable_linux.x86_64.zip
+      
+      - run: |
+          mv Godot_v4.2.2-stable_linux.x86_64 godot
 
       - run: chmod +x godot/
 
