--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -20,9 +20,9 @@ jobs:
           unzip Godot_v4.2.2-stable_linux.x86_64.zip
       
       - run: |
-          mv Godot_v4.2.2-stable_linux.x86_64 godot
+          mv Godot_v4.2.2-stable_linux_x86_64 godot
 
-      - run: chmod +x godot/
+      - run: chmod +x godot/Godot_v4.2.2-stable_linux_x86_64
 
       - name: Test
         run: |
